welcome.lessons.welcome.environment.Environment.scala.error
SourceCode:2: error: ';' expected but '=' found.
toto:String = null;
            ^