welcome.lessons.welcome.environment.Environment.scala.code
avance();
toto:String = null;
System.out.println(toto.length());